--- a/package.json
+++ b/package.json
@@ -21,11 +21,14 @@
     "react-native-calendars": "^1.212.0",
     "react-native-custom-segmented-control": "^3.1.0",
     "react-native-elements": "^1.2.7",
+    "react-native-fast-image": "^7.0.2",
     "react-native-gesture-handler": "^1.3.0",
+    "react-native-image-slider-box": "^1.0.5",
     "react-native-progress": "^4.0.1",
     "react-native-qrcode-svg": "^5.3.2",
     "react-native-segmented-control-tab": "^3.4.1",
     "react-native-slideable-calendar-strip": "^0.4.0",
+    "react-native-snap-carousel": "^3.8.4",
     "react-native-super-grid": "^3.1.1",
     "react-native-svg": "^9.13.3",
     "react-native-svg-charts": "^5.3.0",
