--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-native-fast-image": "^7.0.2",
     "react-native-gesture-handler": "^1.3.0",
     "react-native-image-slider-box": "^1.0.5",
+    "react-native-paper": "^3.2.1",
     "react-native-progress": "^4.0.1",
     "react-native-qrcode-svg": "^5.3.2",
     "react-native-segmented-control-tab": "^3.4.1",
