change icon name of the tab3

--- a/ios/Podfile
+++ b/ios/Podfile
@@ -27,4 +27,6 @@ target 'yogaapp' do
   use_native_modules!
   pod 'RNSVG', :path => '../node_modules/react-native-svg'
 
+  pod 'react-native-video', :path => '../node_modules/react-native-video'
+
 end
