--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native-svg": "^9.13.3",
     "react-native-svg-charts": "^5.3.0",
     "react-native-vector-icons": "^6.6.0",
+    "react-native-video": "^5.0.2",
     "react-navigation": "^3.11.2",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
